Fix button word wrapping

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -102,7 +102,6 @@ a:hover {
     display: inline-block;
     font-weight: 400;
     text-align: center;
-    white-space: nowrap;
     vertical-align: middle;
     user-select: none;
     border: 1px solid #CCC;
